JSW Devsb/src/objects/Districts__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Category__c</fullName>
        <label>District Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <formula>State__r.State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>DIstricts</relationshipLabel>
        <relationshipName>DIstricts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_State__c</fullName>
        <label>Sub-State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Districts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>District_Code__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_State__c</columns>
        <columns>Zone__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Districts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DIstricts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>